Safari365 Prod/src/objects/Quotations__c.object
<CustomObject>
    <description>This the table for quotation, which will be created based on the data from Opportunity and Location Service.</description>
    <fields>
        <fullName>ALL_Quotation_LineItem_Count__c</fullName>
        <label>ALL Quotation LineItem Count</label>
        <summaryFilterItems>
            <field>QuotationLineItem__c.QLI_with_SLI__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QuotationLineItem__c.Quotation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>All_Cancelled_QuotationLineItems__c</fullName>
        <description>This roll up summary will be used in Quotation validation rule which states as follow 

Quotation status cannot change to &quot;Cancelled&quot; unless all service line stages are equal to: No Booking Required, Cancelled, Not Booked.</description>
        <label>All Cancelled QuotationLineItems</label>
        <summaryFilterItems>
            <field>QuotationLineItem__c.All_SLI_Cancelled__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QuotationLineItem__c.Quotation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>All_Confirmed_QuotationLineItem__c</fullName>
        <description>A user can only change to &quot;Raised Invoice&quot; If all service line items are at stages &quot;Provisionally Booked, Request Confirmation, Confirmed,  No Booking Required&quot; Example: if any service line item is = to Stage &quot;Not booked&quot; or  &quot;Request Provisional Booking&quot; a consultant should not be able to update the Quotation Object Stage.</description>
        <label>All_Confirmed_QuotationLineItem</label>
        <summaryFilterItems>
            <field>QuotationLineItem__c.All_SLI_Confirmed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QuotationLineItem__c.Quotation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>All_Funds_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This box is checked once client has completed all payments in full.</inlineHelpText>
        <label>All Funds Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_RaisedInvoice_QuotationLineItem__c</fullName>
        <label>All_RaisedInvoice_QuotationLineItem</label>
        <summaryFilterItems>
            <field>QuotationLineItem__c.All_SLI_Raised_Invoice__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QuotationLineItem__c.Quotation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <inlineHelpText>Details where the Quotation is in the Finance Handover protocol</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Finance Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Finance Approved</fullName>
                </value>
                <value>
                    <fullName>Finance Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_from_FX_Treasury_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval from FX Treasury Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance_Currency_Received__c</fullName>
        <label>Balance Currency Received</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Exchange_Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Balance_Due_Amount_EUR__c</fullName>
        <formula>Sale_in_EUR__c-Deposite_Due_Amount_EUR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>EUR portion of balance for booking.</inlineHelpText>
        <label>Balance Due Amount EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_Due_Amount_USD__c</fullName>
        <formula>Total_Sale_In_USD__c-Deposite_Due_Amount_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>USD portion of balance for booking.</inlineHelpText>
        <label>Balance Due Amount USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_Due_Amount_ZAR__c</fullName>
        <formula>Total_Sale_In_Zar__c-Deposite_Due_Amount_ZAR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ZAR portion of balance for booking.</inlineHelpText>
        <label>Balance Due Amount ZAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_Due_Amount__c</fullName>
        <inlineHelpText>Balance to be paid by client in their selected currency.</inlineHelpText>
        <label>Client Currency Balance Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_Due_Date__c</fullName>
        <label>Balance Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Balance_Received_Date__c</fullName>
        <label>Balance Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Balance_Value_Received_nett__c</fullName>
        <label>Balance Value Received (nett)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_EUR_in_AUD__c</fullName>
        <label>CC ROE for EUR to AUD</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_EUR_in_EUR__c</fullName>
        <label>CC ROE for EUR to EUR</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_EUR_in_GPB__c</fullName>
        <label>CC ROE for EUR to GPB</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_EUR_in_USD__c</fullName>
        <label>CC ROE for EUR to USD</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_USD_in_AUD__c</fullName>
        <label>CC ROE for USD to AUD</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_USD_in_EUR__c</fullName>
        <label>CC ROE for USD to EUR</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_USD_in_GPB__c</fullName>
        <label>CC ROE for USD to GPB</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_USD_in_USD__c</fullName>
        <label>CC ROE for USD to USD</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_ZAR_in_AUD__c</fullName>
        <label>CC ROE for ZAR to AUD</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_ZAR_in_EUR__c</fullName>
        <label>CC ROE for ZAR to EUR</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_ZAR_in_GPB__c</fullName>
        <label>CC ROE for ZAR to GPB</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ROE_for_ZAR_in_USD__c</fullName>
        <label>CC ROE for ZAR to USD</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Sub_Total_for_EUR_in_AUD__c</fullName>
        <formula>Sale_in_EUR__c *  CC_ROE_for_EUR_in_AUD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Sub Total for EUR in AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Sub_Total_for_EUR_in_EUR__c</fullName>
        <formula>Sale_in_EUR__c *  CC_ROE_for_EUR_in_EUR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Sub Total for EUR in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Sub_Total_for_EUR_in_GPB__c</fullName>
        <formula>Sale_in_EUR__c * CC_ROE_for_EUR_in_GPB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Sub Total for EUR in GPB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Sub_Total_for_EUR_in_USD__c</fullName>
        <formula>Sale_in_EUR__c *  CC_ROE_for_EUR_in_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Sub Total for EUR in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Sub_Total_for_USD_in_AUD__c</fullName>
        <formula>Total_Sale_In_USD__c * CC_ROE_for_USD_in_AUD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Sub Total for USD in AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Sub_Total_for_USD_in_EUR__c</fullName>
        <formula>Total_Sale_In_USD__c * CC_ROE_for_USD_in_EUR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Sub Total for USD in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Sub_Total_for_USD_in_GPB__c</fullName>
        <formula>Total_Sale_In_USD__c *  CC_ROE_for_USD_in_GPB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Sub Total for USD in GPB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Sub_Total_for_USD_in_USD__c</fullName>
        <formula>Total_Sale_In_USD__c * CC_ROE_for_USD_in_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Sub Total for USD in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Sub_Total_for_ZAR_in_AUD__c</fullName>
        <formula>Total_Sale_In_Zar__c * CC_ROE_for_ZAR_in_AUD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Sub Total for ZAR in AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Sub_Total_for_ZAR_in_EUR__c</fullName>
        <formula>Total_Sale_In_Zar__c * CC_ROE_for_ZAR_in_EUR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Sub Total for ZAR in EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Sub_Total_for_ZAR_in_GPB__c</fullName>
        <formula>Total_Sale_In_Zar__c * CC_ROE_for_ZAR_in_GPB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Sub Total for ZAR in GPB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Sub_Total_for_ZAR_in_USD__c</fullName>
        <formula>Total_Sale_In_Zar__c * CC_ROE_for_ZAR_in_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Sub Total for ZAR in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COS_in_EUR__c</fullName>
        <label>Total Cos in EUR</label>
        <summarizedField>QuotationLineItem__c.Nett_Cost_in_EUR__c</summarizedField>
        <summaryForeignKey>QuotationLineItem__c.Quotation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>COS_in_USD__c</fullName>
        <label>COS in USD</label>
        <summarizedField>QuotationLineItem__c.Nett_Cost_in_USD__c</summarizedField>
        <summaryForeignKey>QuotationLineItem__c.Quotation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>COS_in_ZAR__c</fullName>
        <label>COS in ZAR</label>
        <summarizedField>QuotationLineItem__c.Net_Cost__c</summarizedField>
        <summaryForeignKey>QuotationLineItem__c.Quotation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Charge_Photobooks_and_Insurance_in__c</fullName>
        <description>Select the currency that you would like to include the photobooks and insurance in, if this is a mostly a USD booking charge in USD and vice versa</description>
        <inlineHelpText>Select the currency that you would like to include the Photobooks and Emergency Evacuation in, if this is a mostly a USD booking charge in USD and vice versa</inlineHelpText>
        <label>Select Photobook &amp; Evac Cover Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>ZAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Currency_Balance_Due_Amount_Calc__c</fullName>
        <formula>Quotation_Sale_Total_in_Selected_CC__c - Deposit_Due_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Currency Balance Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Currency_Locked__c</fullName>
        <formula>Opportunity__r.Client_Currency_Locked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Once Quote stage  = Raised Booking Confirmation, the Client Currency Locks</inlineHelpText>
        <label>Client Currency Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Fund_Recieved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This box is checked when any payment has been received from the client. If a payment has already been received this boxed must been unchecked and checked again. This checkbox being true enables consultants to move to &apos;Confirmed&apos;</inlineHelpText>
        <label>Deposit Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Has_Requested_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>In the Members Club, the client has clicked the &quot;Book This&quot; button. Please proceed within 3 days (maximum) to raise a Booking Confirmation ( there is FX exposure if you delay on this stage)</inlineHelpText>
        <label>Client Has Requested Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Has_Requested_Requote__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The quote you had sent the client has expired ( it if no longer valid due to FX exposure) and your client has requested a re-quote on the same itinerary.</inlineHelpText>
        <label>Client Has Requested Requote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field restricts a user editing a quotation that has already been paid or quoted in FX to Booking Confirmation. Please seek administrator authorization should you need to edit this confirmed quotation</inlineHelpText>
        <label>Untick to Edit Confirmed Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consultant_Name__c</fullName>
        <formula>Opportunity__r.Owner.FirstName + &quot; &quot; + Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_card_sale_total_in_CC_EUR__c</fullName>
        <formula>Quotation_Sale_Total_in_CC_EUR__c +  $CustomMetadata.Credit_Card_Markup__mdt.Credit_Card_Markup_EUR.Markup_value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit card sale total in CC EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_card_sale_total_in_CC_GBP__c</fullName>
        <formula>Quotation_Sale_Total_in_CC_GBP__c + $CustomMetadata.Credit_Card_Markup__mdt.Credit_Card_Markup_GBP.Markup_value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit card sale total in CC GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_card_sale_total_in_CC_USD__c</fullName>
        <formula>Quotation_Sale_Total_in_CC_USD__c +  $CustomMetadata.Credit_Card_Markup__mdt.Credit_Card_Markup_USD.Markup_value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit card sale total in CC USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>TEXT(  Opportunity__r.Client_Display_Currency__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>On the Opportunity level, choose the most likely Client Display Currency (one of the supported Global Currencies)  Your client is able to change their preferred currency in the Members Club, you will need to raise Booking Confirmation in this Currency.</inlineHelpText>
        <label>Client Display Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Client_Requested_Confirmation__c</fullName>
        <label>Date Client Requested Confirmation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Currency_Received__c</fullName>
        <label>Deposit Currency Received</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Exchange_Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deposit_Due_Amount__c</fullName>
        <inlineHelpText>Deposit to be paid by client in their selected currency.</inlineHelpText>
        <label>Client Currency Deposit Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Due_Date__c</fullName>
        <label>Deposit Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Received_Date__c</fullName>
        <label>Deposit Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Value_Override_By_Consultant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The Consultant has amended the standard (30%) deposit requitrements to recieve a greater or lesser booking deposit.</inlineHelpText>
        <label>Deposit Value Override By Consultant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deposit_Value_Received_nett__c</fullName>
        <label>Deposit Value Received (nett)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposite_Due_Amount_EUR__c</fullName>
        <inlineHelpText>EUR portion of deposit for booking.</inlineHelpText>
        <label>Deposit Due Amount EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposite_Due_Amount_USD__c</fullName>
        <inlineHelpText>USD portion of deposit for booking.</inlineHelpText>
        <label>Deposit Due Amount USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposite_Due_Amount_ZAR__c</fullName>
        <inlineHelpText>ZAR portion of deposit for booking.</inlineHelpText>
        <label>Deposit Due Amount ZAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_not_include_Photobooks__c</fullName>
        <formula>Opportunity__r.Do_Not_Send_Phptpbook_Offer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Include Photobooks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_include_insurance__c</fullName>
        <formula>Opportunity__r.Include_Travel_Insurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Include Passenger Emergency Evac</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EFT_Expected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EFT Expected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exchange_Values_Override_By_Finance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox disables the FX rate lookup. Only to be used by FX Manager when FX rates must be manually overridden.</inlineHelpText>
        <label>Disable FX Rate Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foreign_Exchange_Profit__c</fullName>
        <inlineHelpText>Displays gross profit for the quotation</inlineHelpText>
        <label>Foreign Exchange Profit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forward_CC_Buy_Rate_EUR__c</fullName>
        <label>Forward CC Buy Rate EUR</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forward_CC_Buy_Rate_USD__c</fullName>
        <label>Forward CC Buy Rate USD</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forward_CC_Buy_Rate_ZAR__c</fullName>
        <label>Forward CC Buy Rate ZAR</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forward_Contract_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked once forward contract has been completed and funds paid out from FX broker.</inlineHelpText>
        <label>Forward Contract Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forward_Contract_Currency_Committed_Buy__c</fullName>
        <inlineHelpText>Date when forward contract was locked in with FX broker.</inlineHelpText>
        <label>Forward Contract Buy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forward_Contract_Mature_Date_Calc__c</fullName>
        <formula>Balance_Due_Date__c + 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>End date that the forward contract for this quote must be booked to. This is set later than the balance due date to allow for some time for the client payment to settle in our bank account.</inlineHelpText>
        <label>Forward Contract Mature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forward_Contract_Mature_Date__c</fullName>
        <inlineHelpText>Date at which forward contract is set to mature. All client funds must have been received before this date.</inlineHelpText>
        <label>Forward Contract Mature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forward_Contracts_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked once forward contract has been locked in with FX broker.</inlineHelpText>
        <label>Forward Contract Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funds_Received_To_Date__c</fullName>
        <inlineHelpText>Value of all received payments for this quote in the selected client currency.</inlineHelpText>
        <label>Funds Received To Date</label>
        <summarizedField>Payment__c.Amount__c</summarizedField>
        <summaryForeignKey>Payment__c.Quotation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Include_Passenger_Insurance_USD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Passenger Emergency Evac in USD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Passenger_Insurance_ZAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Passenger Emergency Evac in ZAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Photobooks_USD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Photobooks in USD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Photobooks_ZAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Photobooks in ZAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_insurance_for_passengers__c</fullName>
        <formula>Total_Adult_Passengers__c + Total_Child_and_Infant_Travellers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of PAX Emerg Evac included for</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Cos_in_USD_New__c</fullName>
        <formula>Insurance_Sale_in_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Emergency medical evacuation Cos in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Cos_in_ZAR_New__c</fullName>
        <formula>Insurance_Sale_in_ZAR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Emergency medical evacuation Cos in ZAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Sale_in_USD__c</fullName>
        <label>Emergency medical evacuation Sale in USD</label>
        <summarizedField>QuotationLineItem__c.Insurance_Sale_in_USD__c</summarizedField>
        <summaryForeignKey>QuotationLineItem__c.Quotation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Insurance_Sale_in_ZAR__c</fullName>
        <label>Emergency medical evacuation Sale in ZAR</label>
        <summarizedField>QuotationLineItem__c.Insurance_Sale_in_ZAR__c</summarizedField>
        <summaryForeignKey>QuotationLineItem__c.Quotation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Internal_Documents_have_been_Added_to_SF__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please ensure all of the supporting documents have been added to the &quot;Internal Documentation and Traveling Files&quot; folders. 

This includes the Google Sheets client Booking Confirmation and all supplier invoices for confirmed services.</inlineHelpText>
        <label>Internal Documents have been Added to SF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_FX_Management_Notes__c</fullName>
        <inlineHelpText>This field is used to capture any important information around FX values. e.g. reason FX rates refresh is disabled, method used for new blended manual FX rate calc, etc. If rates have decreased in value, then profit margin has decreased against quote.</inlineHelpText>
        <label>Internal FX Management Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Payment_Notes__c</fullName>
        <inlineHelpText>This field is used to capture any information around incoming payments. e.g. Partial deposit amounts received if clients paying parts, under payments due to SWIFT fees, etc.</inlineHelpText>
        <label>Internal Payment Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Iternary_Language__c</fullName>
        <inlineHelpText>Select the correct language to display in the Members Club and for the Itinerary Document</inlineHelpText>
        <label>Itinerary Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>En</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>De</fullName>
                </value>
                <value>
                    <fullName>Pt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Itinerary_Summary__c</fullName>
        <inlineHelpText>This is the intro text that will show on this quotation in the Members Club (and also to be used on your covering email) Make sure this is specific to the quotation you are offering and adding value and insight.</inlineHelpText>
        <label>Quotation Intro Note to Customer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Members_Club_Itinerary_Link__c</fullName>
        <formula>&quot;https://www.safari365.com/mc/itinerary/?id=&quot; + Quotation_ID__c + &quot;&amp;opp=&quot;+Opportunity__r.OpportunityId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the URL to the exact section in the Members Club where the Client can view this Itinerary</inlineHelpText>
        <label>Members Club Itinerary Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_PhotoBook__c</fullName>
        <formula>Opportunity__r.Number_of_Photo_Books_Owed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of PhotoBooks Owed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quotations</relationshipLabel>
        <relationshipName>Quotations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Passenger_Site_URL__c</fullName>
        <formula>&quot;https://www.safari365.com/mc/passengers/?id=&quot; + Quotation_ID__c + &quot;&amp;opp=&quot;+Opportunity__r.OpportunityId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passenger Details Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Link__c</fullName>
        <formula>&quot;https://www.safari365.com/mc/pay/?id=&quot; + Quotation_ID__c + &quot;&amp;opp=&quot;+Opportunity__r.OpportunityId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the URL to the exact section in the Members Club where the Client can proceed to pay</inlineHelpText>
        <label>Members Club Payment Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photobooks_Cos_in_USD_new__c</fullName>
        <formula>Photobooks_Sale_in_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photobooks Cos in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Photobooks_Cos_in_ZAR_New__c</fullName>
        <formula>Photobooks_Sale_in_ZAR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photobooks Cos in ZAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>